# mtorch

./: .gitignore  LICENSE  README.md  prompt.md  pyproject.toml  run-codex-loop.sh  setup.py
compat/: api_surface_seed.json  benchmark_adaptive_avg_pool2d.json  benchmark_amax.json  benchmark_bce_weighted.json  benchmark_binary_add_after_float32_early_fastpath.json  benchmark_binary_add_after_mul_recheck.json  benchmark_binary_add_long_recheck_after_channels_last_module_pipeline.json  benchmark_binary_add_recheck.json  benchmark_binary_special.json  benchmark_binary_special_hot.json  benchmark_bincount.json  benchmark_bincount_after_fastpath.json  benchmark_bincount_after_onepass.json  benchmark_bitwise_and_bool.json  benchmark_bitwise_invert_bool.json  benchmark_cast_check.json  benchmark_cast_float64_long_after_timestep_add_silu.json  benchmark_cast_recheck.json  benchmark_cast_recheck_after_trial_revert.json  benchmark_cast_threshold_trial.json  benchmark_cast_type_as_recheck.json  benchmark_channels_last_group_norm_recheck_after_nearest.json  benchmark_conv1d.json  benchmark_conv2d.json  benchmark_conv3d.json  benchmark_conv_norm.json  benchmark_conv_string.json  benchmark_conv_transpose1d.json  benchmark_conv_transpose1d_recheck.json  benchmark_conv_transpose2d.json  benchmark_conv_transpose3d.json  benchmark_conv_transpose3d_direct_recheck.json  benchmark_cosine_similarity_recheck.json  benchmark_cross_entropy.json  benchmark_cumextrema_after_empty_indices.json  benchmark_cumextrema_diff_final_recheck_after_native_diff.json  benchmark_cummax_after_fastpath.json  (+367 more)
(+40 files in other folders)
